# csv-query-tool-cpp

./: README.md
CSV Query Tool C++/: CMakeLists.txt  README.md  SQL_SYNTAX_GUIDE.md
CSV Query Tool C++/sample-data/: departments.csv  employees.csv  salaries.csv
CSV Query Tool C++/src/: CsvQueryEngine.cpp  CsvQueryEngine.hpp  main.cpp
CSV Query Tool C++/src/executor/: ExpressionEvaluator.cpp  ExpressionEvaluator.hpp  JoinExecutor.cpp  JoinExecutor.hpp  QueryExecutor.cpp  QueryExecutor.hpp  QueryResult.hpp
CSV Query Tool C++/src/index/: HashIndex.hpp  IndexManager.hpp
CSV Query Tool C++/src/optimizer/: QueryOptimizer.hpp
CSV Query Tool C++/src/parser/: Lexer.cpp  Lexer.hpp  SQLParser.cpp  SQLParser.hpp  Token.hpp  TokenType.hpp
CSV Query Tool C++/src/parser/ast/: Command.hpp  Expr.hpp  SelectStatement.hpp
CSV Query Tool C++/src/storage/: Column.hpp  CsvTable.cpp  CsvTable.hpp  DataType.hpp  Row.hpp  Schema.cpp  Schema.hpp  TableRegistry.hpp  Value.hpp
CSV Query Tool C++/src/util/: TablePrinter.cpp  TablePrinter.hpp
CSV Query Tool C++/tests/: test_executor.cpp  test_framework.hpp  test_main.cpp  test_parser.cpp  test_storage.cpp
